# toasty

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENGINE_BUG_AUDIT.md  ISSUE_185_REPORT.md  LICENSE  PLAN.md  README.md  compose.yaml  index.html  issue_185_comment.md  overlap  release-plz.toml  renovate.json  rust-toolchain.toml  toasty-core-regression-tests.md
benches/: Cargo.toml  association.rs
crates/toasty/: CHANGELOG.md  CONTEXT.md  Cargo.toml
crates/toasty-cli/: CHANGELOG.md  Cargo.toml
crates/toasty-cli/src/: config.rs  flavor.rs  lib.rs  migration.rs  theme.rs  utility.rs
crates/toasty-core/: CHANGELOG.md  CONTEXT.md  Cargo.toml
crates/toasty-core/src/: driver.rs  error.rs  lib.rs  macros.rs  migrate.rs  migration.rs  schema.rs  stmt.rs
crates/toasty-core/tests/: bijection.rs  diff_columns.rs  diff_indices.rs  diff_tables.rs  item_parent_validation.rs  schema_db_type_bridge.rs  schema_missing_model.rs  schema_resolve_field.rs  schema_verify_version_field.rs  stmt_cast_jiff.rs  stmt_eval_and.rs  stmt_eval_any.rs  stmt_eval_arg.rs  stmt_eval_binary_op.rs  stmt_eval_cast.rs  stmt_eval_concat_str.rs  stmt_eval_error.rs  stmt_eval_func.rs  stmt_eval_in_list.rs  stmt_eval_is_null.rs  stmt_eval_list.rs  stmt_eval_map.rs  stmt_eval_match.rs  stmt_eval_not.rs  stmt_eval_or.rs  stmt_eval_predicates.rs  stmt_eval_project.rs  stmt_eval_record.rs  stmt_eval_reference.rs  stmt_eval_statement.rs  stmt_eval_unimplemented.rs  stmt_eval_value.rs  stmt_expr_is_a.rs  stmt_expr_properties.rs  stmt_from_expr.rs  stmt_from_expr_variants.rs  stmt_from_value.rs  stmt_index.rs  stmt_infer.rs  stmt_infer_db_ty.rs  (+9 more)
crates/toasty-driver-dynamodb/: CHANGELOG.md  Cargo.toml
crates/toasty-driver-dynamodb/src/: capability.rs  lib.rs  op.rs  test.rs  type.rs  value.rs
crates/toasty-driver-integration-suite/: CHANGELOG.md  Cargo.toml
crates/toasty-driver-integration-suite-macros/: CHANGELOG.md  Cargo.toml
crates/toasty-driver-integration-suite-macros/src/: driver_test.rs  id_rewriter.rs  lib.rs  parse.rs  scenario.rs  test_registry.rs  test_variants.rs
crates/toasty-driver-integration-suite/src/: cx.rs  exec_log.rs  helpers.rs  instrumented_driver.rs  isolate.rs  lib.rs  logging_driver.rs  macros.rs  registry.rs  scenarios.rs  setup.rs  stmt.rs  suite.rs  test.rs  test_util.rs  tests.rs  util.rs
crates/toasty-driver-markdown/: Cargo.toml
crates/toasty-driver-markdown/src/: lib.rs
crates/toasty-driver-memory/: Cargo.toml
crates/toasty-driver-memory/src/: lib.rs
crates/toasty-driver-mongodb/: CONTEXT.md  Cargo.toml  README.md
crates/toasty-driver-mongodb/src/: aggregation.rs  index.rs  lib.rs  value.rs
crates/toasty-driver-mysql/: CHANGELOG.md  Cargo.toml
crates/toasty-driver-mysql/src/: capability.rs  lib.rs  test.rs  transaction_manager.rs  value.rs
crates/toasty-driver-postgresql/: CHANGELOG.md  Cargo.toml
crates/toasty-driver-postgresql/src/: capability.rs  lib.rs  oid_cache.rs  statement_cache.rs  test.rs  transaction_manager.rs  type.rs  value.rs
crates/toasty-driver-sqlite/: CHANGELOG.md  CONTEXT.md  Cargo.toml
crates/toasty-driver-sqlite/src/: capability.rs  lib.rs  test.rs  transaction_manager.rs  value.rs
crates/toasty-driver-turso/: CHANGELOG.md  Cargo.toml
crates/toasty-driver-turso/src/: error.rs  lib.rs  sync.rs  value.rs
crates/toasty-macros/: CHANGELOG.md  Cargo.toml  build.rs
crates/toasty-macros/src/: create.rs  embed_migrations.rs  expand.rs  lib.rs  model.rs  query.rs  update.rs
crates/toasty-macros/tests/: item_parent_macro.rs
crates/toasty-sql/: CHANGELOG.md  CONTEXT.md  Cargo.toml
crates/toasty-sql/src/: diff.rs  json.rs  lib.rs  migration.rs  serializer.rs  stmt.rs  value_json.rs
crates/toasty-sql/tests/: json_decode_ints.rs  migration_add_column.rs  migration_alter_column.rs  migration_alter_table.rs  migration_create_table.rs  migration_drop_column.rs  migration_drop_table.rs  migration_enum_type.rs  serialize_array_predicates.rs  serialize_dml.rs  serialize_expressions.rs  serialize_joins.rs  serialize_select.rs  serialize_subqueries.rs  serialize_transaction.rs  serialize_types.rs  serialize_update_assignments.rs  serialize_values_idents.rs
crates/toasty/src/: apply_update.rs  batch.rs  codegen_support.rs  cursor.rs  db.rs  driver.rs  embed.rs  engine.rs  executor.rs  executor_ext.rs  instrument.rs  (+12 more)
examples/cms-article-fields/: Cargo.toml
examples/composite-key/: Cargo.toml  schema.toasty
examples/hello-toasty/: Cargo.toml
examples/hi-jsonb/: Cargo.toml
examples/item-collection/: Cargo.toml
examples/service-ops/: .gitignore  Cargo.toml
examples/simple-axum-server/: Cargo.toml
examples/store-operations/: Cargo.toml
examples/todo-learning/: Cargo.toml  Toasty.toml
examples/todo-with-cli/: Cargo.toml  Toasty.toml
examples/user-has-one-profile/: Cargo.toml  schema.toasty
tests/: Cargo.toml  build.rs
tests/client/: Cargo.toml
tests/guide-doctests/: Cargo.toml
tests/src/: db.rs  db_test.rs  exec_log.rs  expr.rs  helpers.rs  isolation.rs  lib.rs  logging_driver.rs  macros.rs  prelude.rs  setup.rs  stmt.rs  toasty_test.rs
tests/tests/: belongs_to_configured.rs  belongs_to_one_way.rs  belongs_to_self_referential.rs  bigdecimal.rs  cdylib_ctor_smoke.rs  chrono.rs  connect_bad_url.rs  decimal.rs  deny_missing_docs.rs  discover.rs  docs.rs  docs_advanced_features_compile.rs  docs_guides_compile.rs  driver_ops_verification.rs  dynamodb.rs  embed_no_trait_import.rs  field_auto.rs  field_column_name.rs  field_column_type.rs  field_column_type_validation.rs  field_db_type.rs  has_many_batch_create.rs  has_many_crud_basic.rs  has_many_crud_multi_relations.rs  has_many_crud_one_table.rs  has_many_link_unlink.rs  has_many_n_1.rs  has_many_preload.rs  has_many_scoped_query.rs  has_one_crud_basic.rs  has_one_preload.rs  ilike_non_ascii.rs  index_enum.rs  into_expr.rs  issue_185_repro.rs  jiff.rs  markdown.rs  migration_generate.rs  model_associated_types.rs  models_macro.rs  (+21 more)
tests/tls/: generate-certs.sh  pg_hba.conf  setup-ssl.sh
toasty-examples/: Cargo.toml  README.md
(+65475 files in other folders)
