[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/codegen",
    "src/codegen2",
    "src/core",
    "src/macros",
    "src/toasty",

    # Driver implementations
    "src/db/ddb",
    "src/db/sqlite",
    "src/db/pgsql",

    # General utilities.
    "src/std-util",

    # Examples
    "examples/composite-key",
    "examples/hello-toasty",
    "examples/hello-toasty-macro",
    "examples/cratehub",
    "examples/user-has-one-profile",

    # Tests
    "tests/client",
]


[workspace.dependencies]
toasty-codegen = { path = "src/codegen" }
toasty-codegen2 = { path = "src/codegen2" }
toasty-core = { path = "src/core" }
toasty-driver = { path = "src/driver" }

# Driver implementations
toasty-sqlite = { path = "src/db/sqlite" }
toasty-dynamodb = { path = "src/db/ddb" }

anyhow = "1.0.92"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.83"
by_address = "1.2.1"
cfg-if = "1.0.0"
clap = { version = "4.5.20", features = ["derive"] }
heck = "0.5.0"
indexmap = "2.6.0"
pluralizer = "0.4.0"
postgres = "0.19.10"
postgres-types = "0.2.9"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.37"
quote = "1.0.18"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
std-util = { path = "src/std-util" }
syn = { version = "2.0.86", features = ["full", "extra-traits", "visit-mut"] }
tokio = { version = "1.18", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-stream = { version = "0.1.16", default-features = false }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
