[workspace]
resolver = "2"
members = [
    "crates/toasty",
    "crates/toasty-cli",
    "crates/toasty-core",
    "crates/toasty-macros",
    "crates/toasty-sql",

    # Driver implementations
    "crates/toasty-driver-dynamodb",
    "crates/toasty-driver-mysql",
    "crates/toasty-driver-postgresql",
    "crates/toasty-driver-sqlite",

    # Driver integration test suite
    "crates/toasty-driver-integration-suite",
    "crates/toasty-driver-integration-suite-macros",

    # Examples
    "examples/composite-key",
    "examples/hello-toasty",
    "examples/todo-with-cli",
    "examples/user-has-one-profile",

    # Tests
    "tests",

    # Benchmarks
    "benches",
]

[workspace.package]
readme = "README.md"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2024"
homepage = "https://github.com/tokio-rs/toasty"
keywords = ["orm", "database", "sql", "nosql", "async"]
license = "MIT"
repository = "https://github.com/tokio-rs/toasty"
rust-version = "1.95"
categories = ["database"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
# Toasty crates
toasty = { version = "0.4.0", path = "crates/toasty" }
toasty-cli = { version = "0.4.0", path = "crates/toasty-cli" }
toasty-core = { version = "0.4.0", path = "crates/toasty-core" }
toasty-macros = { version = "0.4.0", path = "crates/toasty-macros" }
toasty-sql = { version = "0.4.0", path = "crates/toasty-sql" }
# Driver implementations
toasty-driver-dynamodb = { version = "0.4.0", path = "crates/toasty-driver-dynamodb" }
toasty-driver-mysql = { version = "0.4.0", path = "crates/toasty-driver-mysql" }
toasty-driver-postgresql = { version = "0.4.0", path = "crates/toasty-driver-postgresql" }
toasty-driver-sqlite = { version = "0.4.0", path = "crates/toasty-driver-sqlite" }

# Driver integration test suite dependencies
toasty-driver-integration-suite = { version = "0.4.0", path = "crates/toasty-driver-integration-suite" }
toasty-driver-integration-suite-macros = { version = "0.4.0", path = "crates/toasty-driver-integration-suite-macros" }

# Other crates
assert-struct = "0.4.2"
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1"
aws-sdk-dynamodb = { version = "1.110.0", features = ["test-util"] }
bit-set = "0.10.0"
by_address = "1.2.1"
cfg-if = "1.0.4"
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16"
deadpool = { version = "0.13", features = ["rt_tokio_1"] }
dialoguer = "0.12"
heck = "0.5.0"
indexmap = "2.13.0"
index_vec = "0.1.4"
inventory = "0.3.24"
jiff = "0.2.23"
lru = "0.16.3"
mysql_async = { version = "0.36.2", default-features = false, features = [
    "minimal",
    "native-tls-tls",
] }
pulldown-cmark = { version = "0.13", default-features = false }
pluralizer = "0.5.0"
percent-encoding = "2.3.2"
postgres-types = { version = "0.2.13", features = ["with-uuid-1", "array-impls"] }
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rand = "0.10"
rust_decimal = "1.41.0"
bigdecimal = "0.4.10"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full", "extra-traits", "visit-mut"] }
toml = "1.1.0"
toml_edit = "0.25.8"
tempfile = "3.27"
proptest = "1"
tokio = { version = "1.50", features = ["full"] }
tokio-postgres = "0.7.17"
tokio-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
const-oid = { version = "0.9.6", default-features = false, features = ["db"] }
sha2 = { version = "0.11", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }
rustls-platform-verifier = "0.6"
rustls-pemfile = "2"
rustls-webpki = { version = "0.103", default-features = false, features = ["alloc", "std"] }
tokio-stream = { version = "0.1.18", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = { version = "1.0.116", features = ["diff"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v4", "v7", "fast-rng"] }

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
