[package]
name = "benches"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[features]
default = ["sqlite"]
sqlite = ["toasty/sqlite"]
mysql = ["toasty/mysql"]
dynamodb = ["toasty/dynamodb"]
postgresql = ["toasty/postgresql"]

[dependencies]
toasty.workspace = true
uuid.workspace = true
toasty-core.workspace = true
tokio.workspace = true
criterion = "0.7.0"

# Database clients for setup/teardown
tokio-postgres.workspace = true
mysql_async.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
rusqlite.workspace = true

# Utilities
tempfile.workspace = true
tests = { version = "0.1.0", path = "../tests" }

[[bench]]
name = "association"
path = "association.rs"
harness = false

[lints]
workspace = true
