[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["sqlite"]
sql = ["sqlite", "mysql", "postgresql"]
sqlite = ["toasty/sqlite"]
mysql = ["toasty/mysql"]
dynamodb = ["toasty/dynamodb"]
postgresql = ["toasty/postgresql"]

[dependencies]
assert-struct.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
bigdecimal.workspace = true
jiff.workspace = true
toasty = { workspace = true, features = ["rust_decimal", "bigdecimal", "jiff"] }
toasty-core = { workspace = true, features = ["assert-struct"] }
toasty-macros.workspace = true
tokio.workspace = true

# Integration test suite
toasty-driver-integration-suite.workspace = true

# Database drivers
toasty-driver-sqlite.workspace = true
toasty-driver-mysql.workspace = true
toasty-driver-postgresql.workspace = true
toasty-driver-dynamodb.workspace = true

# Database clients for cleanup
tokio-postgres.workspace = true
mysql_async.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
rusqlite.workspace = true

# Utilities
std-util.workspace = true
tempfile.workspace = true
trybuild.workspace = true
env_logger = "0.11.8"
url.workspace = true

# Third-party types
uuid.workspace = true

[dev-dependencies]
