[package]
name = "tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false
build = "build.rs"

[build-dependencies]
pulldown-cmark = { workspace = true }

[features]
default = ["sqlite"]
sql = ["sqlite", "mysql", "postgresql"]
sqlite = ["toasty/sqlite", "dep:toasty-driver-sqlite", "dep:rusqlite"]
mysql = ["toasty/mysql", "dep:toasty-driver-mysql", "dep:mysql_async"]
dynamodb = ["toasty/dynamodb", "dep:toasty-driver-dynamodb", "dep:aws-config", "dep:aws-sdk-dynamodb"]
postgresql = ["toasty/postgresql", "dep:toasty-driver-postgresql", "dep:tokio-postgres"]

[dependencies]
assert-struct.workspace = true
async-trait.workspace = true
rust_decimal.workspace = true
bigdecimal.workspace = true
jiff.workspace = true
toasty = { workspace = true, features = ["rust_decimal", "bigdecimal", "jiff"] }
toasty-core = { workspace = true, features = ["assert-struct"] }
toasty-macros.workspace = true
tokio.workspace = true

# Integration test suite
toasty-driver-integration-suite.workspace = true

# Database drivers
toasty-driver-sqlite = { workspace = true, optional = true }
toasty-driver-mysql = { workspace = true, optional = true }
toasty-driver-postgresql = { workspace = true, optional = true }
toasty-driver-dynamodb = { workspace = true, optional = true }

# Database clients for cleanup
tokio-postgres = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

# Utilities
tempfile.workspace = true
trybuild.workspace = true
env_logger = "0.11.10"
url.workspace = true

# Fixtures
tests-fixture-post = { path = "tests/fixtures/post" }
tests-fixture-user = { path = "tests/fixtures/user" }

# Third-party types
uuid.workspace = true

[dev-dependencies]

[lints]
workspace = true
