[package]
name = "tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false
build = "build.rs"

[build-dependencies]
pulldown-cmark = { workspace = true }

[features]
default = ["sqlite"]
sql = ["sqlite", "mysql", "postgresql"]
sqlite = ["toasty/sqlite", "dep:toasty-driver-sqlite"]
mysql = ["toasty/mysql", "dep:toasty-driver-mysql"]
dynamodb = ["toasty/dynamodb", "dep:toasty-driver-dynamodb"]
postgresql = ["toasty/postgresql", "dep:toasty-driver-postgresql"]

[dependencies]
async-trait.workspace = true
rust_decimal.workspace = true
bigdecimal.workspace = true
hashbrown.workspace = true
jiff.workspace = true
toasty = { workspace = true, features = ["rust_decimal", "bigdecimal", "jiff"] }
toasty-core.workspace = true
toasty-macros.workspace = true
tokio.workspace = true

# Integration test suite
toasty-driver-integration-suite.workspace = true

# Database drivers
toasty-driver-sqlite = { workspace = true, optional = true }
toasty-driver-mysql = { workspace = true, optional = true }
toasty-driver-postgresql = { workspace = true, optional = true }
toasty-driver-dynamodb = { workspace = true, optional = true }

# Utilities
trybuild.workspace = true
url.workspace = true

# Fixtures
tests-fixture-post = { path = "tests/fixtures/post" }
tests-fixture-user = { path = "tests/fixtures/user" }

# Third-party types
uuid.workspace = true

[dev-dependencies]

[lints]
workspace = true
