[package]
name = "toasty-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-cli"

[dependencies]
toasty.workspace = true
toasty-core = { workspace = true, features = ["serde"] }
toasty-sql.workspace = true

anyhow = "1.0.100"
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
rand.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit = { workspace = true, features = ["serde"] }
url.workspace = true

[lints]
workspace = true
