[package]
name = "toasty-cli"
version = "0.5.0"
description = "Command-line interface for Toasty schema management"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-cli"

[[bin]]
name = "toasty"
path = "src/bin/toasty.rs"

[dependencies]
toasty = { workspace = true, features = [
    "sqlite",
    "postgresql",
    "mysql",
    "jiff",
    "rust_decimal",
    "bigdecimal",
] }
toasty-core = { workspace = true, features = [
    "serde",
    "jiff",
    "rust_decimal",
    "bigdecimal",
] }
toasty-sql.workspace = true

anyhow = "1.0.102"
cargo_metadata.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
hashbrown.workspace = true
jiff.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
toml.workspace = true
toml_edit = { workspace = true, features = ["serde"] }
url.workspace = true

[lints]
workspace = true
