[package]
name = "toasty-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
assert-struct = { workspace = true, optional = true }
async-trait.workspace = true
aws-sdk-dynamodb.workspace = true
bit-set.workspace = true
deadpool.workspace = true
indexmap.workspace = true
jiff = { workspace = true, optional = true }
mysql_async.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
rusqlite.workspace = true
std-util.workspace = true
tokio-postgres.workspace = true
tokio-stream.workspace = true
url.workspace = true
uuid.workspace = true

[features]
default = []
assert-struct = ["dep:assert-struct"]
rust_decimal = ["dep:rust_decimal"]
bigdecimal = ["dep:bigdecimal"]
jiff = ["dep:jiff"]

[dev-dependencies]
pretty_assertions.workspace = true
