[package]
name = "toasty-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
assert-struct = { workspace = true, optional = true }
async-trait.workspace = true
bit-set.workspace = true
indexmap.workspace = true
jiff = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
std-util.workspace = true
tokio-stream.workspace = true
uuid.workspace = true

[features]
default = []
assert-struct = ["dep:assert-struct"]
rust_decimal = ["dep:rust_decimal"]
bigdecimal = ["dep:bigdecimal"]
jiff = ["dep:jiff"]

[dev-dependencies]
pretty_assertions.workspace = true
