[package]
name = "toasty-core"
version = "0.3.0"
description = "Core types, schema representations, and driver interface for Toasty"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-core"

[dependencies]
assert-struct = { workspace = true, optional = true }
async-trait.workspace = true
bit-set.workspace = true
indexmap.workspace = true
jiff = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
heck.workspace = true
pluralizer.workspace = true
tokio-stream.workspace = true
uuid.workspace = true

[features]
default = []
assert-struct = ["dep:assert-struct"]
rust_decimal = ["dep:rust_decimal"]
bigdecimal = ["dep:bigdecimal"]
jiff = ["dep:jiff"]
serde = ["dep:serde", "bit-set/serde"]

[dev-dependencies]
jiff.workspace = true
pretty_assertions.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

[lints]
workspace = true
