[package]
name = "toasty-driver-dynamodb"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
toasty-core.workspace = true

anyhow.workspace = true
aws-config = "1"
aws-sdk-dynamodb = { version = "1.3.0", features = ["test-util"] }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
