[package]
name = "toasty-driver-dynamodb"
version = "0.1.0"
description = "Amazon DynamoDB driver for Toasty"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-driver-dynamodb"

[dependencies]
async-trait.workspace = true
toasty-core.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
