[package]
name = "toasty-driver-integration-suite-macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["visit", "visit-mut"] }

[lints]
workspace = true
