[package]
name = "toasty-driver-integration-suite-macros"
version = "0.6.2"
description = "Proc macros for the Toasty driver integration test suite"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-driver-integration-suite-macros"

[lib]
proc-macro = true

[dependencies]
hashbrown.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["visit", "visit-mut"] }

[lints]
workspace = true
