[package]
name = "toasty-driver-integration-suite"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-driver-integration-suite"

[dependencies]
assert-struct.workspace = true
async-trait.workspace = true
bigdecimal.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
toasty = { workspace = true, features = ["rust_decimal", "bigdecimal", "jiff", "serde"] }
toasty-core = { workspace = true, features = ["assert-struct"] }
toasty-macros.workspace = true
toasty-driver-integration-suite-macros.workspace = true
tokio.workspace = true
rand.workspace = true
uuid.workspace = true

[lints]
workspace = true
