[package]
name = "toasty-driver-mysql"
version = "0.1.0"
edition = "2021"

[features]
bigdecimal = ["dep:bigdecimal", "toasty-core/bigdecimal"]
jiff = ["dep:jiff", "toasty-core/jiff"]

[dependencies]
toasty-core.workspace = true
toasty-sql.workspace = true

anyhow.workspace = true
bigdecimal = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
mysql_async.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
