[package]
name = "toasty-driver-mysql"
version = "0.1.0"
edition = "2021"

[features]
rust_decimal = ["dep:rust_decimal", "toasty-core/rust_decimal"]
bigdecimal = ["dep:bigdecimal", "toasty-core/bigdecimal"]
jiff = ["dep:jiff", "toasty-core/jiff"]

[dependencies]
toasty-core.workspace = true
toasty-sql.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
mysql_async.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
