[package]
name = "toasty-driver-mysql"
version = "0.2.0"
description = "MySQL driver for Toasty"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-driver-mysql"

[features]
rust_decimal = ["dep:rust_decimal", "toasty-core/rust_decimal"]
bigdecimal = ["dep:bigdecimal", "toasty-core/bigdecimal"]
jiff = ["dep:jiff", "toasty-core/jiff"]

[dependencies]
async-trait.workspace = true
toasty-core.workspace = true
toasty-sql.workspace = true
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
mysql_async.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
