[package]
name = "toasty-driver-postgresql"
version = "0.3.0"
description = "PostgreSQL driver for Toasty"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-driver-postgresql"

[features]
rust_decimal = ["dep:rust_decimal", "toasty-core/rust_decimal"]
bigdecimal = ["dep:bigdecimal", "toasty-core/bigdecimal"]
jiff = ["dep:jiff", "toasty-core/jiff", "postgres-types/with-jiff-0_2"]

[dependencies]
async-trait.workspace = true
toasty-core.workspace = true
toasty-sql.workspace = true
rust_decimal = { workspace = true, optional = true, features = ["db-postgres"] }
bigdecimal = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
lru.workspace = true
postgres.workspace = true
tracing.workspace = true
postgres-types.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
url.workspace = true

[lints]
workspace = true
