[package]
name = "toasty-driver-postgresql"
version = "0.6.2"
description = "PostgreSQL driver for Toasty"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-driver-postgresql"

[features]
default = ["tls"]
tls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:sha2",
    "dep:x509-cert",
    "dep:rustls-platform-verifier",
    "dep:rustls-pemfile",
    "dep:rustls-webpki",
]
rust_decimal = ["dep:rust_decimal", "toasty-core/rust_decimal", "toasty-sql/rust_decimal"]
bigdecimal = ["dep:bigdecimal", "toasty-core/bigdecimal", "toasty-sql/bigdecimal"]
jiff = ["dep:jiff", "toasty-core/jiff", "toasty-sql/jiff", "postgres-types/with-jiff-0_2"]

[dependencies]
async-trait.workspace = true
toasty-core.workspace = true
toasty-sql.workspace = true
hashbrown.workspace = true
rust_decimal = { workspace = true, optional = true, features = ["db-postgres"] }
bigdecimal = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
lru.workspace = true
tracing.workspace = true
percent-encoding.workspace = true
postgres-protocol.workspace = true
postgres-types.workspace = true
fallible-iterator.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
url.workspace = true
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
x509-cert = { workspace = true, optional = true }
rustls-platform-verifier = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rustls-webpki = { workspace = true, optional = true }

[lints]
workspace = true
