[package]
name = "toasty-driver-sqlite"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
async-trait.workspace = true
toasty-core.workspace = true
toasty-sql.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
