[package]
name = "toasty-driver-turso"
version = "0.9.0"
description = "Turso (SQLite-compatible) driver for Toasty"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-driver-turso"

[features]
default = []
sync = ["turso/sync"]
rust_decimal = ["toasty-core/rust_decimal", "toasty-sql/rust_decimal"]
bigdecimal = ["toasty-core/bigdecimal", "toasty-sql/bigdecimal"]
jiff = ["toasty-core/jiff", "toasty-sql/jiff"]

[dependencies]
async-trait.workspace = true
toasty-core.workspace = true
toasty-sql.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
turso.workspace = true
url.workspace = true
uuid.workspace = true
percent-encoding.workspace = true

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["json"] }
serde_json.workspace = true

[lints]
workspace = true
