[package]
name = "toasty-macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
toasty-core.workspace = true

heck.workspace = true
pluralizer.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
toasty = { workspace = true, features = ["jiff", "serde", "sqlite"] }
uuid.workspace = true
jiff.workspace = true

[lints]
workspace = true
