[package]
name = "toasty-macros"
version = "0.4.0"
description = "Derive macros for Toasty models and embeds"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
readme.workspace = true
documentation = "https://docs.rs/toasty-macros"

[lib]
proc-macro = true

[dependencies]
toasty-core.workspace = true

hashbrown.workspace = true
heck.workspace = true
pluralizer.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
toasty = { path = "../toasty", features = ["jiff", "serde", "sqlite"] }
uuid.workspace = true
jiff.workspace = true

[lints]
workspace = true
